sequencer crash when using rendered preview (.blend included) #33735

Closed
opened 2013-01-02 17:38:01 +01:00 by Jakub Steiner · 4 comments

%%%Opening up the sequencer view in the provided .blend file will crash due to the preview. GL preview works fine.

Tested in blender-2.65-4.fc18.x86_64 Fedora 18 package, blender.org official 64bit binary and Mac OS X as well. backtraces:

- Blender version with error, and version that worked ---

I created this in 2.63 which worked fine.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open up the file, switch to sequence view, which includes a rendered preview. Crash occurs in most cases. In case it doesn't, seeking around the timeline will trigger the crash.

%%%

%%%Opening up the sequencer view in the provided .blend file will crash due to the preview. GL preview works fine. Tested in blender-2.65-4.fc18.x86_64 Fedora 18 package, blender.org official 64bit binary and Mac OS X as well. backtraces: - Blender version with error, and version that worked --- I created this in 2.63 which worked fine. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open up the file, switch to sequence view, which includes a rendered preview. Crash occurs in most cases. In case it doesn't, seeking around the timeline will trigger the crash. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Jimmac: don't add 1000 lines of debug input a report, makes it unreadable :) I've removed it.

I confirmed crash, it's memory errors, crash in the new image locking.

(Note "switch to sequence view" = "set the sequencer screen")%%%

%%%Jimmac: don't add 1000 lines of debug input a report, makes it unreadable :) I've removed it. I confirmed crash, it's memory errors, crash in the new image locking. (Note "switch to sequence view" = "set the sequencer screen")%%%

%%%Issue should now be fixed in svn rev53633. Thanks for the report, closing.%%%

%%%Issue should now be fixed in svn rev53633. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33735
No description provided.