Fix #33735: sequencer crash when using rendered preview

Issue was caused by preview job starting just moment before
sequencer starts rendering. This lead to threading conflicts
since renderer itself is not thread-safe.

Now all preview jobs would be killed before sequencer starts
rendering stack when final render for preview is enabled.