source/blender/editors/space_sequencer/sequencer_draw.c
@@ -929,6 +929,13 @@ void draw_image_seq(const bContext *C, Scene *scene, ARegion *ar, SpaceSeq *sseq
 		 * needed to make so sequencer's rendering doesn't conflict with compositor
 		 */
 		WM_jobs_kill_type(CTX_wm_manager(C), WM_JOB_TYPE_COMPOSITE);
+
+		if ((scene->r.seq_flag & R_SEQ_GL_PREV) == 0) {
+			/* in case of final rendering used for preview, kill all previews,
+			 * otherwise threading conflict will happen in rendering module
+			 */
+			WM_jobs_kill_type(CTX_wm_manager(C), WM_JOB_TYPE_RENDER_PREVIEW);
+		}
 	}
 
 	render_size = sseq->render_size;
